--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,10 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-org.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/faceppsdk_min.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-configuration-1.10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-log4j12-1.6.6.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
