--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Weichat</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -9,19 +9,26 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-   <servlet>  
-        <servlet-name>CoreServlet</servlet-name>  
-        <servlet-class>  
+  <servlet>
+    <servlet-name>CoreServlet</servlet-name>
+    <servlet-class>  
             nju.iip.servlet.CoreServlet  
-        </servlet-class>  
-    </servlet> 
-    
-    <!-- url-pattern中配置的/coreServlet用于指定该Servlet的访问路径 -->  
-    <servlet-mapping>  
-        <servlet-name>CoreServlet</servlet-name>  
-        <url-pattern>/CoreServlet</url-pattern>  
-    </servlet-mapping>   
+        </servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CoreServlet</servlet-name>
+    <url-pattern>/CoreServlet</url-pattern>
+  </servlet-mapping>
   
+   <servlet>
+    <servlet-name>OAuthServlet</servlet-name>
+    <servlet-class>  
+            nju.iip.servlet.OAuthServlet  
+        </servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OAuthServlet</servlet-name>
+    <url-pattern>/OAuthServlet</url-pattern>
+  </servlet-mapping>
   
 </web-app>
