--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,7 +20,7 @@
     <url-pattern>/CoreServlet</url-pattern>
   </servlet-mapping>
   
-   <servlet>
+  <servlet>
     <servlet-name>OAuthServlet</servlet-name>
     <servlet-class>  
             nju.iip.servlet.OAuthServlet  
@@ -29,6 +29,17 @@
   <servlet-mapping>
     <servlet-name>OAuthServlet</servlet-name>
     <url-pattern>/OAuthServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>AddUserServlet</servlet-name>
+    <servlet-class>  
+            nju.iip.servlet.AddUserServlet  
+        </servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddUserServlet</servlet-name>
+    <url-pattern>/AddUserServlet</url-pattern>
   </servlet-mapping>
   
 </web-app>
