--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//WebContent/guahao.jsp=UTF-8
 encoding//WebContent/question.jsp=UTF-8
 encoding//WebContent/register.jsp=UTF-8
 encoding//WebContent/registerOK.jsp=UTF-8
+encoding/<project>=UTF-8
