--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
   <servlet>
     <servlet-name>CoreServlet</servlet-name>
     <servlet-class>  
@@ -19,6 +21,8 @@
     <servlet-name>CoreServlet</servlet-name>
     <url-pattern>/CoreServlet</url-pattern>
   </servlet-mapping>
+  
+  
   <servlet>
     <servlet-name>OAuthServlet</servlet-name>
     <servlet-class>  
@@ -29,6 +33,8 @@
     <servlet-name>OAuthServlet</servlet-name>
     <url-pattern>/OAuthServlet</url-pattern>
   </servlet-mapping>
+  
+  
   <servlet>
     <servlet-name>RegisterServlet</servlet-name>
     <servlet-class>  
@@ -40,7 +46,8 @@
     <url-pattern>/RegisterServlet</url-pattern>
   </servlet-mapping>
   
-   <servlet>
+  
+  <servlet>
     <servlet-name>GetScaleServlet</servlet-name>
     <servlet-class>  
             nju.iip.servlet.GetScaleServlet  
@@ -50,4 +57,16 @@
     <servlet-name>GetScaleServlet</servlet-name>
     <url-pattern>/GetScaleServlet</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>GetAnswerServlet</servlet-name>
+    <servlet-class>  
+            nju.iip.servlet.GetAnswerServlet  
+        </servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetAnswerServlet</servlet-name>
+    <url-pattern>/GetAnswerServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
