--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,8 +9,6 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  
   <servlet>
     <servlet-name>CoreServlet</servlet-name>
     <servlet-class>  
@@ -21,8 +19,6 @@
     <servlet-name>CoreServlet</servlet-name>
     <url-pattern>/CoreServlet</url-pattern>
   </servlet-mapping>
-  
-  
   <servlet>
     <servlet-name>OAuthServlet</servlet-name>
     <servlet-class>  
@@ -33,8 +29,6 @@
     <servlet-name>OAuthServlet</servlet-name>
     <url-pattern>/OAuthServlet</url-pattern>
   </servlet-mapping>
-  
-  
   <servlet>
     <servlet-name>RegisterServlet</servlet-name>
     <servlet-class>  
@@ -45,8 +39,6 @@
     <servlet-name>RegisterServlet</servlet-name>
     <url-pattern>/RegisterServlet</url-pattern>
   </servlet-mapping>
-  
-  
   <servlet>
     <servlet-name>GetScaleServlet</servlet-name>
     <servlet-class>  
@@ -58,6 +50,7 @@
     <url-pattern>/GetScaleServlet</url-pattern>
   </servlet-mapping>
   
+  
   <servlet>
     <servlet-name>GetAnswerServlet</servlet-name>
     <servlet-class>  
@@ -67,6 +60,17 @@
   <servlet-mapping>
     <servlet-name>GetAnswerServlet</servlet-name>
     <url-pattern>/GetAnswerServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>ScaleRecordServlet</servlet-name>
+    <servlet-class>  
+            nju.iip.servlet.ScaleRecordServlet  
+        </servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ScaleRecordServlet</servlet-name>
+    <url-pattern>/ScaleRecordServlet</url-pattern>
   </servlet-mapping>
   
 </web-app>
