--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//WebContent/ChooseScale.jsp=UTF-8
 encoding//WebContent/guahao.jsp=UTF-8
 encoding//WebContent/map.jsp=UTF-8
+encoding//WebContent/post.jsp=UTF-8
 encoding//WebContent/register.jsp=UTF-8
 encoding//WebContent/registerOK.jsp=UTF-8
 encoding//WebContent/scale.jsp=UTF-8
