--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//WebContent/ChooseScale.jsp=UTF-8
 encoding//WebContent/guahao.jsp=UTF-8
 encoding//WebContent/map.jsp=UTF-8
 encoding//WebContent/post.jsp=UTF-8
+encoding//WebContent/post_list.jsp=UTF-8
 encoding//WebContent/register.jsp=UTF-8
 encoding//WebContent/registerOK.jsp=UTF-8
 encoding//WebContent/scale.jsp=UTF-8
