添加消息盒子

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebContent/ChooseScale.jsp=UTF-8
+encoding//WebContent/MessageBox.jsp=UTF-8
 encoding//WebContent/guahao.jsp=UTF-8
 encoding//WebContent/map.jsp=UTF-8
 encoding//WebContent/post.jsp=UTF-8
