增加上拉添加更多帖子功能

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,12 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>Weichat</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>sorry.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <servlet-name>CoreServlet</servlet-name>
@@ -119,8 +114,7 @@
     <servlet-name>AddLikeServlet</servlet-name>
     <url-pattern>/AddLikeServlet</url-pattern>
   </servlet-mapping>
-  
-   <servlet>
+  <servlet>
     <servlet-name>MessageServlet</servlet-name>
     <servlet-class>  
             nju.iip.servlet.MessageServlet  
@@ -129,6 +123,16 @@
   <servlet-mapping>
     <servlet-name>MessageServlet</servlet-name>
     <url-pattern>/MessageServlet</url-pattern>
+  </servlet-mapping>
+   <servlet>
+    <servlet-name>GetMorePostsServlet</servlet-name>
+    <servlet-class>  
+            nju.iip.servlet.GetMorePostsServlet  
+        </servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetMorePostsServlet</servlet-name>
+    <url-pattern>/GetMorePostsServlet</url-pattern>
   </servlet-mapping>
   
 </web-app>
